--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
 NODE_ENV=production
-DB_CONNECT=mongodb+srv://abdulmanaf:abdulmanaf@cluster0.lqhr8cx.mongodb.net/?retryWrites=true&w=majority
+# DB_CONNECT=mongodb+srv://abdulmanaf:abdulmanaf@cluster0.lqhr8cx.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECT=mongodb+srv://littlelambs:littlelambs@cluster0.gszrnuw.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=123456abcd
