--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "material-table": "^1.69.3",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
