--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "material-table": "^1.69.3",
+    "moment": "^2.29.4",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
